split base image into two parts for faster building

--- a/grit-base/Dockerfile
+++ b/grit-base/Dockerfile
@@ -1,10 +1,9 @@
-FROM ubuntu:vivid
+FROM gab1one/tex-base
 
 RUN apt-get update && apt-get install -y \
     ghc \
     subversion \
     gcc  \
     g++ \
-    texlive-full \
     openjdk-8-jdk \
     && rm -rf /var/lib/apt/lists/*
