--- a/grit-base/Dockerfile
+++ b/grit-base/Dockerfile
@@ -6,4 +6,5 @@ RUN apt-get update && apt-get install -y \
     gcc  \
     g++ \
     openjdk-8-jdk \
+    openssh-client \
     && rm -rf /var/lib/apt/lists/*
